RESOLVED FIXED251296
REGRESSION(259372@main): ASSERTION FAILED: !m_disabledFieldsetElementsCount on fast/forms/fieldset/fieldset-elements.html
https://bugs.webkit.org/show_bug.cgi?id=251296
Summary REGRESSION(259372@main): ASSERTION FAILED: !m_disabledFieldsetElementsCount o...
Bri Harris
Reported 2023-01-27 14:48:03 PST
fast/forms/fieldset/fieldset-elements.html is a flaky crash on iPad OS, Big Sur and later Debug. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Ffieldset%2Ffieldset-grid.html Crash Log is attached. CRASH LOG TEXT: stderr: ASSERTION FAILED: !m_disabledFieldsetElementsCount dom/Document.cpp(682) : virtual WebCore::Document::~Document()
Attachments
Crash Log (3.65 KB, text/plain)
2023-01-27 14:49 PST, Bri Harris
no flags
Radar WebKit Bug Importer
Comment 1 2023-01-27 14:48:47 PST
Bri Harris
Comment 2 2023-01-27 14:49:12 PST
Created attachment 464693 [details] Crash Log
Ryan Haddad
Comment 3 2023-01-27 16:03:09 PST
I wonder if https://commits.webkit.org/259372@main is somehow related, it landed shortly before the first crash.
Alexey Shvayka
Comment 4 2023-01-30 09:35:12 PST
Thanks folks, that's definitely https://commits.webkit.org/259372@main, yet I don't immediately see the underlying cause: hasDisabledAttribute() in fieldset destructor is safe, addDisabledFieldsetElement() / removeDisabledFieldsetElement() call sites are unchanged... Trying to reproduce locally now...
Alexey Shvayka
Comment 5 2023-01-30 12:16:39 PST
EWS
Comment 6 2023-01-30 12:22:10 PST
Committed 259580@main (f4d8caebb352): <https://commits.webkit.org/259580@main> Reviewed commits have been landed. Closing PR #9335 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.