REGRESSION(259372@main): ASSERTION FAILED: !m_disabledFieldsetElementsCount on fast/forms/fieldset/fieldset-elements.html https://bugs.webkit.org/show_bug.cgi?id=251296

Reviewed by Ryosuke Niwa.

With this change, addDisabledFieldsetElement() / removeDisabledFieldsetElement() are called
only when "disabled" attribute is added or removed, ignoring cases when its value is changed,
fixing Document::m_disabledFieldsetElementsCount to be always correct.

* Source/WebCore/html/HTMLFieldSetElement.cpp:
(WebCore::HTMLFieldSetElement::parseAttribute):

Canonical link: https://commits.webkit.org/259580@main